[gd_scene load_steps=18 format=3 uid="uid://br7nkod73qtbb"]

[ext_resource type="Script" path="res://huh_ending_2.gd" id="1_viblg"]
[ext_resource type="FontFile" uid="uid://bsqmnvt4wifwp" path="res://Ldfcomicsans-jj7l.ttf" id="2_sht51"]
[ext_resource type="Texture2D" uid="uid://dl6rl70itifqh" path="res://backrooms1.png" id="2_w5ovh"]
[ext_resource type="AudioStream" uid="uid://clcwubcymwxpp" path="res://peace.mp3" id="3_6uujp"]
[ext_resource type="Texture2D" uid="uid://homwjkvbs85b" path="res://backrooms2.png" id="3_0865m"]
[ext_resource type="Texture2D" uid="uid://b38xixrxxfdw4" path="res://darel.png" id="4_ic2ts"]
[ext_resource type="AudioStream" uid="uid://4ejqxp520ynu" path="res://dariel/untitled-2.mp3" id="7_wev7c"]
[ext_resource type="AudioStream" uid="uid://6nxfx1ajcl1t" path="res://dariel/untitled-3.mp3" id="8_kav7w"]
[ext_resource type="AudioStream" uid="uid://b4i1ngpbf7n7e" path="res://dariel/untitled-4.mp3" id="9_fd4mm"]
[ext_resource type="AudioStream" uid="uid://batbd4ycv58fx" path="res://dariel/684149__robinhood76__12120-collapsing-building.wav" id="10_78crh"]
[ext_resource type="AudioStream" uid="uid://degp4ci3px3eb" path="res://dariel/untitled.mp3" id="10_kaeia"]

[sub_resource type="Animation" id="Animation_yc00j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialog1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialog1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dialog2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dialog2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("bg2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(224, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TextureRect:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(404, 179)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ColorRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_udwgg"]
resource_name = "coolll"
length = 7.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_wev7c")
}],
"times": PackedFloat32Array(3.5)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialog1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.9, 6.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dialog1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.9, 6.5, 6.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pws8u"]
resource_name = "fight him"
length = 3.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_kav7w")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialog1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dialog2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dialog2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hjy8e"]
resource_name = "final"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialog2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_fd4mm")
}],
"times": PackedFloat32Array(1.3)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bg2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4.5, 5.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(224, 0), Vector2(224, -225)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureRect:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.9, 5.2, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(404, 179), Vector2(404, 179), Vector2(404, 179), Vector2(404, -494)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(7, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(10),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"go_back"
}]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer3")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_78crh")
}],
"times": PackedFloat32Array(4.3)
}
tracks/6/use_blend = true
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 8, 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 9, 9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 10, 10.1, 10.2, 10.3, 10.4, 10.5, 10.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0), Vector2(0, 0), Vector2(50, 25), Vector2(-50, 76), Vector2(25, 0)]
}

[sub_resource type="Animation" id="Animation_s47re"]
resource_name = "nein"
length = 4.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.14,
"start_offset": 0.0,
"stream": ExtResource("10_kaeia")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"go_back"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vtt1e"]
_data = {
"RESET": SubResource("Animation_yc00j"),
"coolll": SubResource("Animation_udwgg"),
"fight him": SubResource("Animation_pws8u"),
"final": SubResource("Animation_hjy8e"),
"nein": SubResource("Animation_s47re")
}

[node name="huh ending" type="Node3D"]
script = ExtResource("1_viblg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bg2" type="TextureRect" parent="CanvasLayer"]
offset_left = 224.0
offset_right = 916.0
offset_bottom = 202.0
texture = ExtResource("3_0865m")
expand_mode = 1

[node name="bg1" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w5ovh")
expand_mode = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -221.0
offset_right = 308.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_sht51")
theme_override_font_sizes/font_size = 60
text = "Perfect run"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = 79.0
offset_right = 308.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_sht51")
theme_override_font_sizes/font_size = 60
text = "Perfect run"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("3_6uujp")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="CanvasLayer"]
bus = &"Dialogs"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="CanvasLayer"]
bus = &"Dialogs"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 404.0
offset_top = 179.0
offset_right = 718.0
offset_bottom = 578.999
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ic2ts")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_vtt1e")
}
autoplay = "coolll"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Dialog1" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -135.0
offset_right = 242.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)

[node name="Label" type="Label" parent="CanvasLayer/Dialog1"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 51.0
grow_horizontal = 2
text = "What are you doing here"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Dialog1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -40.0
offset_right = -18.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "I want to fight you"

[node name="Button2" type="Button" parent="CanvasLayer/Dialog1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -40.0
offset_right = 197.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "I don't know man"

[node name="Dialog2" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -135.0
offset_right = 242.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)

[node name="Label" type="Label" parent="CanvasLayer/Dialog2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 51.0
grow_horizontal = 2
text = "How?"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Dialog2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -40.0
offset_right = -18.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Fight."

[node name="Button2" type="Button" parent="CanvasLayer/Dialog2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -40.0
offset_right = 197.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "idk man google it
or something"

[connection signal="pressed" from="CanvasLayer/Dialog1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Dialog1/Button2" to="." method="anim_back"]
[connection signal="pressed" from="CanvasLayer/Dialog2/Button" to="." method="_on_butto22n_pressed"]
[connection signal="pressed" from="CanvasLayer/Dialog2/Button2" to="." method="anim_back"]
